// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals Tooltip Component renders children correctly 1`] = `
<div
  className="TooltipWrapper"
>
  <div
    className="TooltipContent"
  >
    test
  </div>
</div>
`;

exports[`Signals Tooltip Component renders correctly with default children 1`] = `
<div
  className="TooltipWrapper"
>
  <div
    className="TooltipContent"
  >
    1
  </div>
</div>
`;

exports[`Signals Tooltip Component renders correctly without date 1`] = `
<div
  className="TooltipWrapper"
>
  <div
    className="TooltipContent"
  >
    1
  </div>
</div>
`;
